<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sms.swm.com.sms.DialogActivity">
    <TextView android:id="@+id/sms_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintVertical_bias="0.052"
        android:text="@string/sms_title"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/sms_send_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.106"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="30dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:text="@string/sms_sending"
        app:layout_constraintTop_toBottomOf="@+id/sms_title" />
    <TextView
        android:id="@+id/sms_deliver_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/sms_delivered"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/sms_send_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintVertical_bias="0.097"
        android:visibility="invisible"
        />
    <Button android:id="@+id/sms_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sms_deliver_report"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.413" />
</android.support.constraint.ConstraintLayout>
