<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sms.swm.com.sms.MainActivity">

    <EditText
        android:id="@+id/sms_phone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sms_text"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@+id/sms_phone"
        android:lines="30"/>

    <Button
        android:id="@+id/sms_send"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sms_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/sms_send"

        app:layout_constraintVertical_bias="0.425"
        android:layout_marginLeft="29dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/sms_send_in_background"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sms_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/sms_send_in_background"

        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintVertical_bias="0.425"
        app:layout_constraintLeft_toRightOf="@+id/sms_send"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/sms_send_in_service"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sms_send_in_service"/>
</android.support.constraint.ConstraintLayout>
